Fix styles (z-index) of the drop down list

--- a/TeachAndTest-client/src/app/shared/components/controls/drop-down-list/drop-down-list.component.scss
+++ b/TeachAndTest-client/src/app/shared/components/controls/drop-down-list/drop-down-list.component.scss
@@ -17,13 +17,14 @@
   position: relative;
   &__preview {
     padding-left: 10px;
-    border: 1px solid black;
     &:hover {
       background-color: rgb(128, 128, 128);
     }
   }
   &__content {
     position: absolute;
+    z-index: 2;
+    background-color: #fff;
     width: 100%;
     border: 0.5px solid lightgray;
     overflow-y: scroll;
